--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,7 @@ h2 {
   font-family: "Poppins", sans-serif;
   padding-top: 10px;
 }
-p {
+.time-today {
   color: #45a6f5;
   text-align: center;
   padding-top: 10px;
@@ -35,7 +35,7 @@ h5 {
   border-width: 3px;
   border-radius: 3px;
   margin-top: 10px;
-  padding-bottom: 15px;
+  padding-bottom: 5px;
   box-sizing: unset;
 }
 .search-text {
@@ -104,7 +104,7 @@ h5 {
 .partly-cloudy-1 {
   display: block;
   margin: 0 auto;
-  padding-bottom: 25px;
+  padding-bottom: 10px;
   max-width: 120px;
   max-height: 120px;
 }
@@ -123,7 +123,7 @@ h5 {
   max-width: 225px;
   max-height: 255px;
   display: block;
-  margin: 0 auto;
+  margin: 0 auto 20px;
 }
 .forecast-details {
   padding: 0px 0px;
