--- a/src/style.css
+++ b/src/style.css
@@ -146,3 +146,10 @@ h5 {
   text-align: center;
   font-family: "Poppins", sans-serif;
 }
+.github-link {
+  font-family: "Poppins", sans-serif;
+  margin-left: 115px;
+  margin-right: 115px;
+  font-size: small;
+  color: #ff7043;
+}
